# ChangeLog for sec-policy/selinux-base-policy
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.159 2014/11/23 15:09:36 swift Exp $

  23 Nov 2014; Sven Vermeulen <swift@gentoo.org>
  selinux-base-policy-9999.ebuild:
  Add notice about bug 530178

  23 Nov 2014; Sven Vermeulen <swift@gentoo.org>
  selinux-base-policy-9999.ebuild:
  Parallel builds are fixed since February 2014

  01 Nov 2014; Sven Vermeulen <swift@gentoo.org>
  selinux-base-policy-2.20140311-r6.ebuild:
  Stabilize rev 6

*selinux-base-policy-2.20140311-r7 (01 Nov 2014)

  01 Nov 2014; Sven Vermeulen <swift@gentoo.org>
  +selinux-base-policy-2.20140311-r7.ebuild:
  Bump revision r7 of SELinux policies

  01 Nov 2014; Sven Vermeulen <swift@gentoo.org>
  selinux-base-policy-9999.ebuild:
  Add KEYWORDS logic in -9999 ebuilds for ease of copying

  30 Aug 2014; Sven Vermeulen <swift@gentoo.org>
  selinux-base-policy-9999.ebuild:
  Use single-line rlpkg call and do not label policy packages

  24 Aug 2014; Sven Vermeulen <swift@gentoo.org>
  selinux-base-policy-9999.ebuild:
  Back to gogo infrastructure

  23 Aug 2014; Sven Vermeulen <swift@gentoo.org>
  selinux-base-policy-9999.ebuild:
  Temporarily use github until gogo is back on track

  22 Aug 2014; Sven Vermeulen <swift@gentoo.org>
  selinux-base-policy-2.20140311-r5.ebuild:
  Stabilize r5 policies

*selinux-base-policy-2.20140311-r6 (21 Aug 2014)

  21 Aug 2014; Sven Vermeulen <swift@gentoo.org>
  +selinux-base-policy-2.20140311-r6.ebuild:
  Release of 2.20140311-r6

*selinux-base-policy-2.20140311-r5 (09 Aug 2014)

  09 Aug 2014; Sven Vermeulen <swift@gentoo.org>
  +selinux-base-policy-2.20140311-r5.ebuild, selinux-base-policy-9999.ebuild:
  Bump towards r5 (fixes duplicate context for hiawatha)

  08 Aug 2014; Sven Vermeulen <swift@gentoo.org>
  selinux-base-policy-9999.ebuild: