@@ -10,4 +10,4 @@ RDEPEND==sec-policy/selinux-base-2.20140311-r7
 SLOT=0
 SRC_URI=http://oss.tresys.com/files/refpolicy/refpolicy-2.20140311.tar.bz2 http://dev.gentoo.org/~swift/patches/selinux-base-policy/patchbundle-selinux-base-policy-2.20140311-r7.tar.bz2
 _eclasses_=eutils	6faef4c127028ccbba3a11400d24ae34	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=27c2eac30183948992ff75b90ab6bc0e
+_md5_=e5668bde1a4d0ca6b6d0922f88e43f05
