@@ -17,24 +17,26 @@ EBUILD selinux-base-policy-2.20140311-r3.ebuild 3842 SHA256 2d3062fef28e7d4c196d
 EBUILD selinux-base-policy-2.20140311-r4.ebuild 3844 SHA256 15b1a60872c468e5e323987b1d56a08f8839757a50e77d90822bebe3a8e4e794 SHA512 c3080b9cdfeeb59272d51aed107f3fb9823a875dc10336e0a65e13470c154c02a6905246108ffb85cff7324e745440dd80135c3129a0908421a9be9862da2868 WHIRLPOOL 8f4f17e533c628d9783c60049397aad29ecb6e74871842870e220fbc18360b5353fb311fb927e8540ff4f9d0c57748c5eb2d15eba4ef6561a488a34d262c7edf
 EBUILD selinux-base-policy-2.20140311-r5.ebuild 4087 SHA256 c3d07b6465aac57899df606a431d819ea3da797ba63d8828a1eacfe1405ef5f9 SHA512 784a2ccc00997c76294a2eeef5f20d7371badc1b1d66d5d3b76d079b678edebc5dcb60e85f8ad00d930b769fdc10bf83a1d5c5906f989d5e8cedfc44a029be13 WHIRLPOOL 4e4837a87b6449d7d2416396f54228ec6ba05cc2d04db7acc90950e238bc782f967ce6a48f366d72a0bdb47e2145530f3842d254d0a815b314220a1b3d9ff733
 EBUILD selinux-base-policy-2.20140311-r6.ebuild 4087 SHA256 18d35c3497344c8f24ea7c27e31f87ab92bc790620cdb3aba2ef4773404cdcc1 SHA512 234b8b45248adfef459fcd612601cdd457f89435c8b196e4d2ce069e096e6035c6834aff72d83146ec96f1fc5e80c75bee293685513f65685c29180bc73e1584 WHIRLPOOL f4bbee02bc351d98668e5f42a91042728fe9dddbca9667eedac660152acb273897d52dd708093c8169adabfd40e142f36d3e25efffe44eaa3cab0fa0a4b709b3
-EBUILD selinux-base-policy-2.20140311-r7.ebuild 4555 SHA256 141c94066f9f07c915371fcd265261dce64c7cec0e103d62ed789784d080edc9 SHA512 c78ad1dc2f6a44547d7c7164b46178c1b5e2315b7d7a5ea36dd35c20e321eadbec867611d8cac834cefab2febc9cf2c9bdef83d22b8b2a358da1e7798e7a3b0c WHIRLPOOL 83675cfac477ae99b481afa3317934fddfc36a07f67a8e796150412663660002d8d72f2caf789f3502f69e6cd76c6bbbc2e4c66bd74c49a1a6ff9ea2afca272c
-EBUILD selinux-base-policy-9999.ebuild 4534 SHA256 5f0ac294a3a4a0f8fd4840007380e38907876b0093876a0770b762536618f221 SHA512 c47a7f30d8dc2e5f63b60e688654fb70e0fd95a871c17fb8271ccc580730cbfe728f8cd211f39befaf1c50d4721f0022a3c8dd2a10f55b895aeea507d4600222 WHIRLPOOL b672ded27de8671f6c1095209f10d6c8d94504b9c4be873810a43e27a1fb1df7a03cf12ac7dc47692e22dd2ef6026377b87975b7e57389835dcec87977cff7de
-MISC ChangeLog 34365 SHA256 69ba3ebc2dc2345dd3b80ee8db606fbdf95dbcf3939c59e11a067ed92862654e SHA512 2fe60e58b8f50e60c2950a3d069263d2eef28a7b4881efe99073b103c4fb3d14c5fb0a68217c44312ea66b7dbaf05abc5530900dd8b277870c07a9dc5cfd9973 WHIRLPOOL e728cde76d93e62b8944f64dbd928ef387f2d41f9417d3492bee249f5ca16cae7dc83680a5786760e48b1cbccd73943e0cfcc748e13bdebcef8609f4853724d2
+EBUILD selinux-base-policy-2.20140311-r7.ebuild 4568 SHA256 0aaa325f9ebc43100e61686de1cb65761796543096a88e2567a01976ead511f7 SHA512 4ca4675d2722732f836dc4a453ff57a04ce12b9ea55591f398a74aba894fb36599c502a30b67a55064c8f490bca2d778148707650cc8a95e951cca10a30d30b5 WHIRLPOOL d2b80beeb151540661dddf719777ff33405949099b3b6cb612a1c1c9fd4f20261f05159b6598be36838c47a43f2e366cb59e30849dd22351e8dd2b5bbf93229b
+EBUILD selinux-base-policy-9999.ebuild 4547 SHA256 502aa3efe10f09e04e084d7c833db8657304a69c89d1ae4915d519157b973552 SHA512 99df68b589d483a1d323b5810085c9f877e79eb6d2b71138d547d4abb8ff906ec64958571200c4e61f140e9b12d330f8fd61934eea1664d64fe7c6a4f7fe6472 WHIRLPOOL e5087c4117565b4eda14aac78b4bdf0b21815d1cb3cbf36e4261e7e2d929dbfc6428c8f659159b96364e71e5fdbd15c45ec4b10137b1c93e2a5f7677c8cbcd94
+MISC ChangeLog 34524 SHA256 528e68a1e526188809f6c3575f0630d3dd4184670d7e28233eedec082b7e6980 SHA512 3b0ba8f0ed079d5ed6621eea229eb70baeedc65ee22fa3a1b91a6623dd257fad201a7fb9505c3e437029a7bfd002c78b53dd1d33aa1b485b9ea79eabf15cb343 WHIRLPOOL c3819cba6658308d4fc420b75ab93eea4f34e4ca9179dbcad9aa9c36be5399386374e054c7d9a614427f11d6afdc10e1d6b5d5ab99dd4269defc7b83726c76f8
 MISC metadata.xml 448 SHA256 4babd5e53785136aa79ee0737a89af1fc49c4fc144aba0f6163d6f85215f57e2 SHA512 7e747c9dbae3eaee62a284824a68039961264540e0633e617aaabaeef2e83f4623863d29ee26c2e4738ac706d3824914f530f8e2b990ac7f06aa8f6e4cae9964 WHIRLPOOL 733957f76ca89c6fdd08060a368048276247994db56cf8325e69b896a07dc5e576ca124f3190079b169ec078a2e69156d4b12e6c6cc94328248705779f357bc4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJUcfiCAAoJEC7dUkA7aK9H+uoQAI3Mm+Wrqwy7swb9s+xiKFme
-vL5VRTToN+9GnyqT8u4+HrhKSE2DhmObKR9Op+OU+GBATL467SiaAt3BRGsWB5m8
-BaV4HQuWIz+m+UdkfLrnWPNyyFHGxam/0q/20siOZkK9x+xds0jyEbbLMpAjTvaI
-VbWL8pUKojeXqMvOp4cLnrEMkvbLpm31fyRBh4PEhFhhmTs2HDa3vfzOjhyP5lpu
-h00JQeKLiwz8LP06wJYjF/0+9JtQBXOlq99xpXRd+kYHUvla/jgwE1aNB2FIMST/
-pBnsV7r1XqmPbZIBHY5SyXIsr59uqlXurTuy4RiF2XM2hWKByGdfsC18H1WyhZxc
-iJifuH0M6AaptQKMc5b/lDlbGgkz5QXirCzwehrE9hlJhPu0ahCtfvb2QZgxFVfs
-dGAm/2Gp0koqkigxdULaiYPxLbper05A38IrxFZkiL3AQ1Zh2YLDmj8UmZ7AMKma
-tV0oIDAjr8faaXQDxLwfSEL9Kg43ZkCcnS8u9PXzMETIzEWCnJeAumK2JKX4m1xq
-lNL47O6NMvf1RePLOupnLrszGAISoys8rvGdMO+tVhL4lWC7ULzhHRlj8bT1dfww
-XVizAfh9M8JMXA1YqwdjR7ATB1LxMDo7erJZbhtSF/HV66es0bQUGHpU9Ypr4X0T
-euCfAmhjyn0fRl4BO/Wu
-=f8Jw
+iQJ8BAEBCABmBQJUeauYXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRFMTYyREVBRDFDQ0REMTEzRjA0QjNENDky
+QkJFRDlDQjFBNjhFRjU1AAoJECu+2csaaO9V8icP/0EcmkwRNKskzPTag/bPfa3r
+2BY4zNULthQ37TtaHNBPryoxC06CJVgAwYEGsbOJfVUr53TyAN7pk1TqXA/H5UQp
+BM6xpUW36nq0ZMMFzZzOepqXhvKAKw1BV+zeePHWYYf3MPmAGcKSIylcDtzVcf9D
+vkMXulpvEOl1//Ey+/Mc/E/5lnlzzIBYvMexpC1HedRYfwNHTGhw1B1BWghxOfs2
+UFYRXzScKb1XSSkQJ3MtcAFdQC0uEZm2geyrHe4Rg8C81ykQJ2cm9SCvZiWgw3DE
+5vMhNtSA50Sig3reK5lCqeFNW0gKGcoGRJzjmVVFpPCiBYnUoBtNJEONByTYaRcW
+Xq1a0LrcsM5CAY5sw4Vgx+3S97ku4uPuBQ0X2rPntotSbpTSPIZ4rK3TFAgXyBZt
+8TXCQDsiJigVJNwpfw0HuEObLm3OH7VDGn2W5m/Csil0k+hgDj5xPuShWDRFOuKE
+pI4hR12LOOnDAnEi3/qe+XRE/y8ChSAG+/SP0WC4OoYjKzermbcH7dsqy7H0nU3l
+dRST8wr6puqBkViUXPnu4KbqvuQLG9YHqnCbuz2mbr5rHcAt9CLD2+VoS0926Fk5
+pyiAYmdTpFQEH9jkdAiSpN1O6QwoZzAU+Ynk+3VYicZ2qwtay9n6ZiLOsw1af+X6
+AVGP1z+znMF6Y5J5AHzR
+=BIJS
 -----END PGP SIGNATURE-----
